--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+qdrant-client = "^1.12.1"
+pydantic = "^2.10.1"
+torch = "^2.5.1"
+fastapi = "^0.115.5"
+transformers = "^4.46.3"
+uvicorn = "^0.32.1"
+sentence-transformers = "^3.3.1"
 
 
 [build-system]
