--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ torch = "^2.5.1"
 fastapi = "^0.115.5"
 transformers = "^4.46.3"
 uvicorn = "^0.32.1"
-sentence-transformers = "^3.3.1"
+#sentence-transformers = "^3.3.1"
 asyncio = "^3.4.3"
 requests = "^2.32.3"
 python-telegram-bot = "^21.7"
