--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ uvicorn = "^0.32.1"
 asyncio = "^3.4.3"
 requests = "^2.32.3"
 python-telegram-bot = "^21.7"
+langchain = "^0.3.9"
+snscrape = "^0.7.0.20230622"
 
 
 [build-system]
