--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "llm project for cb"
 authors = ["Egor Tishchenko & Nikita Arzamazov"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
@@ -19,6 +20,10 @@ requests = "^2.32.3"
 python-telegram-bot = "^21.7"
 langchain = "^0.3.9"
 snscrape = "^0.7.0.20230622"
+tavily-python = "^0.5.0"
+langgraph = "^0.2.60"
+langchain-community = "^0.3.14"
+mistralai = "^1.2.5"
 
 
 [build-system]
